--- a/header/src/editor.scss
+++ b/header/src/editor.scss
@@ -58,10 +58,37 @@
 	}
 }
 
-.cthf__starter-btn-wrap {
-	display: flex;
-	gap: 12px;
-	justify-content: center;
-	padding: 20px 16px;
-	background-color: #e2e2e2;
+.cthf__starter-wrap {
+	padding: 24px;
+	border: 1px solid #000;
+
+	& .cthf__starter-header {
+		display: flex;
+		align-items: center;
+		gap: 6px;
+
+		& .starter__title {
+			font-size: 16px;
+		}
+	}
+
+	& .starter__img {
+		margin: 0;
+		max-width: 22px;
+		max-height: 22px;
+
+		& img {
+			width: 100%;
+			height: 100%;
+		}
+	}
+
+	& .cthf__starter-content {
+		margin-top: 8px;
+	}
+
+	& .cthf__starter-btn-wrap {
+		display: flex;
+		gap: 12px;
+	}
 }
