--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -1,7 +1,3 @@
-.cthf-block__header:not(.on-scroll__sticky) {
-	transition: all 0.3s ease-out;
-}
-
 .cthf-block__header.is-sticky.on-scroll__sticky:not(.top-bar__is-sticky)
 	> .wp-block-group,
 .cthf-block__header.is-sticky.on-scroll__sticky.top-bar__is-sticky {
@@ -9,5 +5,38 @@
 	top: 0;
 	z-index: 99;
 	width: 100%;
-	transition: all 0.3s ease-in-out;
+	animation: slideDown 0.32s ease-in-out forwards;
+}
+.cthf-block__header.is-sticky.is-bottom-scroll__hidden.on-scroll__hide:not(
+		.top-bar__is-sticky
+	)
+	> .wp-block-group,
+.cthf-block__header.is-sticky.is-bottom-scroll__hidden.on-scroll__hide.top-bar__is-sticky {
+	position: fixed;
+	top: 0;
+	z-index: 99;
+	width: 100%;
+	animation: slideUp 0.32s ease-in-out forwards;
+}
+
+@keyframes slideDown {
+	from {
+		top: -100px; /* Start hidden */
+		opacity: 0;
+	}
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+
+@keyframes slideUp {
+	from {
+		top: 0;
+		opacity: 1;
+	}
+	to {
+		top: -100px; /* Hide it smoothly */
+		opacity: 0;
+	}
 }
