--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -1,6 +1,9 @@
 .cthf__display-none {
 	display: none;
 }
+.cthf__overflow-hidden {
+	overflow: hidden;
+}
 
 .cthf-block__header.is-sticky.on-scroll__sticky:not(.top-bar__is-sticky)
 	> .wp-block-group,
@@ -49,6 +52,16 @@
 	}
 }
 
+/* Mobile Layout */
+.cthf__mobile-layout {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1180px;
+	padding: 26px;
+}
 /* Navigation Icon */
 .cthf__responsive-navigation {
 	display: inline-block;
@@ -56,6 +69,7 @@
 	& .nav__icon {
 		fill: #000;
 		display: flex;
+		cursor: pointer;
 	}
 }
 
@@ -78,15 +92,51 @@
 		background: #fff;
 		z-index: 999999;
 		width: 35%;
-		transition: all 0.35s ease-in-out;
+
+		@media only screen and (width <= 1024px) {
+			& {
+				width: 100% !important;
+			}
+		}
 
 		&.position-left {
 			left: -100%;
-
-			&.show-sidebar {
-				left: 0;
-				transition: all 0.35s ease-in;
-			}
+			animation: openTrayLeft 0.3s ease forwards;
 		}
+
+		&.position-right {
+			right: -100%;
+			animation: openTrayRight 0.3s ease forwards;
+		}
+
+		& .close__icon {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 20px;
+			height: 20px;
+			fill: #000;
+			display: flex;
+			cursor: pointer;
+			margin: 10px;
+		}
+	}
+}
+
+@keyframes openTrayLeft {
+	from {
+		left: -100%;
+	}
+	to {
+		left: 0;
+	}
+}
+
+@keyframes openTrayRight {
+	from {
+		right: -100%;
+	}
+	to {
+		right: 0;
 	}
 }
