--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -7,7 +7,8 @@
 
 .cthf-block__header.is-sticky.on-scroll__sticky:not(.top-bar__is-sticky)
 	> .wp-block-group,
-.cthf-block__header.is-sticky.on-scroll__sticky.top-bar__is-sticky {
+.cthf-block__header.is-sticky.on-scroll__sticky.top-bar__is-sticky,
+.cthf__mobile-layout-wrapper.is-sticky.on-scroll__sticky {
 	position: fixed;
 	top: 0;
 	z-index: 99;
@@ -18,7 +19,8 @@
 		.top-bar__is-sticky
 	)
 	> .wp-block-group,
-.cthf-block__header.is-sticky.is-bottom-scroll__hidden.on-scroll__hide.top-bar__is-sticky {
+.cthf-block__header.is-sticky.is-bottom-scroll__hidden.on-scroll__hide.top-bar__is-sticky,
+.cthf__mobile-layout-wrapper.is-bottom-scroll__hidden.on-scroll__hide {
 	position: fixed;
 	top: 0;
 	z-index: 99;
@@ -26,9 +28,9 @@
 	animation: slideUp 0.32s ease-in-out forwards;
 }
 
-.cthf-block__header.is-sticky.on-scroll__sticky {
-	opacity: 0.95;
-}
+// .cthf-block__header.is-sticky.on-scroll__sticky {
+// 	opacity: 0.95;
+// }
 
 @keyframes slideDown {
 	from {
@@ -53,6 +55,10 @@
 }
 
 /* Mobile Layout */
+.cthf__mobile-layout-wrapper {
+	padding: 26px;
+	box-sizing: border-box;
+}
 .cthf__mobile-layout {
 	display: flex;
 	justify-content: space-between;
@@ -60,7 +66,6 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1180px;
-	padding: 26px;
 }
 /* Navigation Icon */
 .cthf__responsive-navigation {
@@ -80,8 +85,8 @@
 		top: 0;
 		left: 0;
 		z-index: 99999;
-		width: 100%;
-		height: 100%;
+		width: 100vw;
+		height: 100vh;
 		background-color: #00000043;
 	}
 
