--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -1,10 +1,3 @@
-.cthf__display-none {
-	display: none;
-}
-.cthf__overflow-hidden {
-	overflow: hidden;
-}
-
 .cthf-block__header.is-sticky.on-scroll__sticky:not(.top-bar__is-sticky)
 	> .wp-block-group,
 .cthf-block__header.is-sticky.on-scroll__sticky.top-bar__is-sticky,
@@ -27,10 +20,6 @@
 	width: 100%;
 	animation: slideUp 0.32s ease-in-out forwards;
 }
-
-// .cthf-block__header.is-sticky.on-scroll__sticky {
-// 	opacity: 0.95;
-// }
 
 @keyframes slideDown {
 	from {
@@ -66,15 +55,65 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1180px;
-}
-/* Navigation Icon */
-.cthf__responsive-navigation {
-	display: inline-block;
 
-	& .nav__icon {
+	@media only screen and (width<=1280px) {
+		& {
+			flex-wrap: wrap;
+			gap: 20px;
+		}
+	}
+}
+/* Responsive Buttons */
+.cthf__responsive-navigation {
+	display: inline-flex;
+	gap: 16px;
+	align-items: center;
+
+	// Icons
+	& .cthf__mob-icon {
+		width: 24px;
+		height: 24px;
 		fill: #000;
 		display: flex;
 		cursor: pointer;
+
+		&.search__icon,
+		&.user__icon {
+			fill: none;
+			stroke: #000;
+		}
+	}
+
+	// Search Icon
+	& .cthf__search-wrapper {
+		display: flex;
+		gap: 6px;
+		align-items: center;
+
+		& form {
+			margin: 0;
+		}
+
+		& .cthf__search {
+			padding: 8px;
+
+			&.show-on-click {
+				width: 0;
+				max-width: 0;
+				visibility: hidden;
+				opacity: 0;
+				position: absolute;
+				transition: max-width 0.3s ease-out;
+			}
+			&.is-visible {
+				width: 100%;
+				max-width: 200px;
+				visibility: visible;
+				opacity: 1;
+				position: unset;
+				transition: max-width 0.3s ease-in-out;
+			}
+		}
 	}
 }
 
@@ -148,7 +187,7 @@
 	}
 }
 
-/* Navigation Styles */
+/* Overriding default Navigation Styles */
 .cthf__sidebar-panel-wrap nav {
 	display: block !important;
 
@@ -169,7 +208,6 @@
 		visibility: visible;
 		list-style: none;
 		opacity: 1;
-		display: block;
 		position: initial;
 		width: 100%;
 		height: auto;
