chore: working with sidebar

--- a/header/src/editor.scss
+++ b/header/src/editor.scss
@@ -1,4 +1,5 @@
-.cthf__mobile-layout-picker {
+.cthf__mobile-layout-picker,
+.cthf__cta-btn-group {
 	& .flex-wrap {
 		padding: 22px 10px;
 		border: 1px solid #acacac;
