--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -45,6 +45,14 @@
 
 /* Mobile Layout */
 .cthf__mobile-layout-wrapper {
+	& ul {
+		list-style: none;
+	}
+	& ul,
+	& li {
+		margin: 0;
+		padding: 0;
+	}
 	/* Site Logo */
 	& .custom-logo-link {
 		display: flex;
@@ -55,10 +63,181 @@
 			height: auto;
 		}
 	}
+	& .content-align-center .custom-logo-link {
+		margin: 0 auto;
+	}
+	& .content-align-right .custom-logo-link {
+		margin: 0 0 0 auto;
+	}
+
+	/* Navigation */
+	& .content-align-center .wp-block-navigation__container {
+		text-align: center;
+
+		& .wp-block-navigation__submenu-container {
+			width: auto !important;
+		}
+	}
+	& .content-align-right .wp-block-navigation__container {
+		text-align: right;
+
+		& .wp-block-navigation__submenu-container {
+			width: auto !important;
+		}
+	}
 
 	/* CTA Button */
 	& .cthf__cta-anchor-btn {
 		text-align: center;
+	}
+
+	/* Social Icons */
+	& .cthf__social-icon-group {
+		display: flex;
+		gap: 16px;
+
+		& .cthf__social-icon {
+			transition: all 0.23s ease-out;
+
+			& a {
+				display: flex;
+				// height: fit-content;
+				width: 100%;
+				height: 100%;
+				align-items: center;
+				justify-content: center;
+			}
+
+			/* Brand Colors */
+			&.has-brand-color {
+				&.view-stacked a {
+					color: #fff;
+				}
+				&.social-facebook.view-default a {
+					color: #0866ff;
+				}
+				&.social-facebook.view-stacked {
+					background-color: #0866ff;
+				}
+				&.social-instagram.view-default a {
+					color: #ff0069;
+				}
+				&.social-instagram.view-stacked {
+					background-color: #ff0069;
+				}
+				&.social-whatsapp.view-default a {
+					color: #25d366;
+				}
+				&.social-whatsapp.view-stacked {
+					background-color: #25d366;
+				}
+				&.view-default.social-tiktok a,
+				&.view-default.social-x a,
+				&.view-default.social-medium a {
+					color: #000;
+				}
+				&.view-stacked.social-tiktok,
+				&.view-stacked.social-x,
+				&.view-stacked.social-medium {
+					background-color: #000;
+				}
+				&.social-pinterest.view-default a {
+					color: #bd081c;
+				}
+				&.social-pinterest.view-stacked {
+					background-color: #bd081c;
+				}
+				&.social-spotify.view-default a {
+					color: #1ed760;
+				}
+				&.social-spotify.view-stacked {
+					background-color: #1ed760;
+				}
+				&.social-reddit.view-default a {
+					color: #ff4500;
+				}
+				&.social-reddit.view-stacked {
+					background-color: #ff4500;
+				}
+				&.social-rss.view-default a {
+					color: #ffa500;
+				}
+				&.social-rss.view-stacked {
+					background-color: #ffa500;
+				}
+				&.social-snapchat.view-default a {
+					color: #fffc00;
+				}
+				&.social-snapchat.view-stacked {
+					background-color: #fffc00;
+				}
+				&.social-telegram.view-default a {
+					color: #26a5e4;
+				}
+				&.social-telegram.view-stacked {
+					background-color: #26a5e4;
+				}
+				&.social-vk.view-default a {
+					color: #0077ff;
+				}
+				&.social-vk.view-stacked {
+					background-color: #0077ff;
+				}
+				&.social-tumblr.view-default a {
+					color: #36465d;
+				}
+				&.social-tumblr.view-stacked {
+					background-color: #36465d;
+				}
+				&.social-youtube.view-default a {
+					color: #ff0000;
+				}
+				&.social-youtube.view-stacked {
+					background-color: #ff0000;
+				}
+				&.social-twitch.view-default a {
+					color: #9146ff;
+				}
+				&.social-twitch.view-stacked {
+					background-color: #9146ff;
+				}
+				&.social-yelp.view-default a {
+					color: #ff1a1a;
+				}
+				&.social-yelp.view-stacked {
+					background-color: #ff1a1a;
+				}
+				&.social-etsy.view-default a {
+					color: #f16521;
+				}
+				&.social-etsy.view-stacked {
+					background-color: #f16521;
+				}
+				&.social-dribble.view-default a {
+					color: #ea4c89;
+				}
+				&.social-dribble.view-stacked {
+					background-color: #ea4c89;
+				}
+				&.social-behance.view-default a {
+					color: #1769ff;
+				}
+				&.social-behance.view-stacked {
+					background-color: #1769ff;
+				}
+				&.social-linkedin.view-default a {
+					color: #0077b5;
+				}
+				&.social-linkedin.view-stacked {
+					background-color: #0077b5;
+				}
+			}
+
+			&:hover {
+				transform: scale(1.1);
+				transition: all 0.23s ease-in-out;
+			}
+		}
 	}
 }
 
