--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -268,8 +268,8 @@
 
 	// Icons
 	& .cthf__mob-icon {
-		width: 15px;
-		height: 15px;
+		width: 18px;
+		height: 18px;
 		cursor: pointer;
 	}
 
@@ -293,8 +293,8 @@
 
 			& .close__icon {
 				position: absolute;
-				right: 5%;
-				top: 5%;
+				right: 3%;
+				top: 3%;
 				border-radius: 100px;
 				padding: 12px;
 				background-color: #fff;
@@ -418,6 +418,32 @@
 			display: flex;
 			cursor: pointer;
 			margin: 10px;
+		}
+
+		/* Menu */
+		& .wp-block-navigation__container .wp-block-navigation__submenu-container {
+			border: none !important;
+			display: none;
+
+			&.is-visible {
+				display: flex;
+			}
+		}
+		&
+			.wp-block-navigation__container
+			.wp-block-navigation-item.has-child
+			> button {
+			transform: rotate(0deg);
+			transition: all 0.3s ease-out;
+		}
+		&
+			.wp-block-navigation__container
+			.wp-block-navigation-item.has-child:has(
+				.wp-block-navigation__submenu-container.is-visible
+			)
+			> button {
+			transform: rotate(180deg);
+			transition: all 0.3s ease-in-out;
 		}
 
 		/* Button Group */
