chore: working with search layout

--- a/header/src/editor.scss
+++ b/header/src/editor.scss
@@ -46,3 +46,9 @@
 	width: 18px;
 	height: 16px;
 }
+
+.cthf__mobile-layout-wrapper .cthf__responsive-navigation .mini-cart__wrapper {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
