--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -287,9 +287,19 @@
 			width: 100vw;
 			height: 100vh;
 			position: fixed;
-			top: 0;
 			left: 0;
 			z-index: 9999;
+			top: -100%;
+			transition: all 0.5s ease;
+			visibility: hidden;
+			opacity: 0;
+
+			&.has-animation__slide-down:not(.cthf__display-none) {
+				top: 0;
+				visibility: visible;
+				opacity: 1;
+				transition: all 0.5s ease;
+			}
 
 			& .close__icon {
 				position: absolute;
@@ -318,14 +328,22 @@
 			background-color: #00000068;
 		}
 
-		& form {
+		& .cthf__search-body {
 			margin: 0;
 			position: absolute;
-			top: 40%;
+			top: 30%;
 			left: 50%;
 			transform: translate(-50%, -50%);
 			width: 80%;
 
+			& .search__heading {
+				margin-bottom: 16px;
+			}
+		}
+
+		& form {
+			position: relative;
+			
 			& .search__icon {
 				position: absolute;
 				top: 50%;
@@ -336,7 +354,6 @@
 				height: 16px;
 			}
 		}
-
 		& .cthf__search {
 			padding: 8px;
 			padding-left: 36px;
