chore: working with sidebar preview in editor

--- a/header/src/editor.scss
+++ b/header/src/editor.scss
@@ -56,3 +56,16 @@
 .cthf__sidebar-panel-wrap {
 	position: relative;
 }
+
+/* Sidebar Modal */
+.cthf__sidebar-panel-modal {
+	height: 100%;
+
+	& .components-modal__content.hide-header {
+		padding: 0 !important;
+	}
+
+	& .sidebar-panel__body {
+		width: 100%;
+	}
+}
