chore: contact info block init and work with business hour add/remove grouped type

--- a/business-hours/src/editor.scss
+++ b/business-hours/src/editor.scss
@@ -18,3 +18,13 @@
 		text-transform: capitalize;
 	}
 }
+.cthf__attr-group.has-position-relative {
+	position: relative;
+}
+.cthf-attr__remove-icon {
+	position: absolute;
+	top: 0;
+	right: 0;
+	fill: #cf2e2e;
+	cursor: pointer;
+}
