--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -280,85 +280,6 @@
 		& .search__icon-wrapper {
 			display: flex;
 		}
-
-		& .cthf__search-modal {
-			width: 100vw;
-			height: 100vh;
-			position: fixed;
-			left: 0;
-			z-index: 9999;
-			top: -100%;
-			transition: all 0.5s ease;
-			visibility: hidden;
-			opacity: 0;
-
-			&.has-animation__slide-down:not(.cthf__display-none) {
-				top: 0;
-				visibility: visible;
-				opacity: 1;
-				transition: all 0.5s ease;
-			}
-
-			& .close__icon {
-				position: absolute;
-				right: 3%;
-				top: 3%;
-				border-radius: 100px;
-				padding: 12px;
-				background-color: #fff;
-				width: 20px;
-				height: 20px;
-				cursor: pointer;
-				transition: all 0.23s ease-out;
-
-				&:hover {
-					color: #fff;
-					background-color: #f90;
-					transform: rotate(180deg);
-					transition: all 0.23s ease-in-out;
-				}
-			}
-		}
-		& .cthf__search-overlay {
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			background-color: #00000068;
-		}
-
-		& .cthf__search-body {
-			margin: 0;
-			position: absolute;
-			top: 30%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			width: 80%;
-
-			& .search__heading {
-				margin-bottom: 16px;
-			}
-		}
-
-		& form {
-			position: relative;
-
-			& .search__icon {
-				position: absolute;
-				top: 50%;
-				transform: translateY(-50%);
-				color: #acacac;
-				margin-left: 12px;
-				width: 18px;
-				height: 16px;
-			}
-		}
-		& .cthf__search {
-			padding: 8px;
-			padding-left: 36px;
-			box-sizing: border-box;
-			width: 100%;
-			height: 50px;
-		}
 	}
 
 	/* Mini-cart Icon */
@@ -377,6 +298,87 @@
 	/* My Account Icon */
 	& .cthf__my-account-wrap {
 		display: flex;
+	}
+}
+/* Search Modal */
+.cthf-block__wrapper {
+	& .cthf__search-modal {
+		width: 100vw;
+		height: 100vh;
+		position: fixed;
+		left: 0;
+		z-index: 9999;
+		top: -100%;
+		transition: all 0.5s ease;
+		visibility: hidden;
+		opacity: 0;
+
+		&.has-animation__slide-down:not(.cthf__display-none) {
+			top: 0;
+			visibility: visible;
+			opacity: 1;
+			transition: all 0.5s ease;
+		}
+
+		& .close__icon {
+			position: absolute;
+			right: 3%;
+			top: 3%;
+			border-radius: 100px;
+			padding: 12px;
+			background-color: #fff;
+			width: 20px;
+			height: 20px;
+			cursor: pointer;
+			transition: all 0.23s ease-out;
+
+			&:hover {
+				color: #fff;
+				background-color: #f90;
+				transform: rotate(180deg);
+				transition: all 0.23s ease-in-out;
+			}
+		}
+	}
+	& .cthf__search-overlay {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-color: #00000068;
+	}
+
+	& .cthf__search-body {
+		margin: 0;
+		position: absolute;
+		top: 30%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 80%;
+
+		& .search__heading {
+			margin-bottom: 16px;
+		}
+	}
+
+	& form {
+		position: relative;
+
+		& .search__icon {
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			color: #acacac;
+			margin-left: 12px;
+			width: 18px;
+			height: 16px;
+		}
+	}
+	& .cthf__search {
+		padding: 8px;
+		padding-left: 36px;
+		box-sizing: border-box;
+		width: 100%;
+		height: 50px;
 	}
 }
 
