--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -562,7 +562,8 @@
 	}
 }
 
-/* Overriding default Navigation Styles */
+/* Overriding default block styles */
+// Navigation Styles
 .cthf__sidebar-panel-wrap nav {
 	display: block !important;
 }
@@ -663,4 +664,11 @@
 .wp-block-navigation__submenu-container.wp-block-navigation-submenu a:hover {
 	transform: translateX(5px);
 	filter: brightness(85%);
+}
+
+// Search styles
+.cthf__search-modal-overlay.wp-block-search__button-only {
+	& .wp-block-search__input {
+		display: none;
+	}
 }
