feat: add search overlay module

--- a/footer/src/style.scss
+++ b/footer/src/style.scss
@@ -32,10 +32,14 @@
 		right: 0;
 	}
 
-	& .cthf__back-to-top {
+	& svg {
 		display: flex;
 		justify-content: center;
 		align-items: center;
+	}
+
+	& p {
+		margin: 0;
 	}
 }
 
