--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -43,8 +43,7 @@
 	}
 }
 
-/* Mobile Layout */
-.cthf__mobile-layout-wrapper {
+.cthf-block__wrapper {
 	& ul {
 		list-style: none;
 	}
@@ -53,6 +52,10 @@
 		margin: 0;
 		padding: 0;
 	}
+}
+
+/* Mobile Layout */
+.cthf__mobile-layout-wrapper {
 	/* Site Logo */
 	& .custom-logo-link {
 		display: flex;
@@ -350,13 +353,26 @@
 	& .cthf__search-body {
 		margin: 0;
 		position: absolute;
-		top: 30%;
+		top: 25%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 		width: 80%;
 
 		& .search__heading {
+			margin-top: 0;
 			margin-bottom: 16px;
+		}
+
+		/* Ajax Search */
+		& .cthf__search-results {
+			margin-top: 36px;
+			position: relative;
+		}
+		& .cthf__search-results .posts__collection {
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			gap: 26px;
+			row-gap: 20px;
 		}
 	}
 
@@ -369,13 +385,14 @@
 			transform: translateY(-50%);
 			color: #acacac;
 			margin-left: 12px;
-			width: 18px;
-			height: 16px;
+			width: 24px;
+			height: auto;
+			display: flex;
 		}
 	}
 	& .cthf__search {
 		padding: 8px;
-		padding-left: 36px;
+		padding-left: 40px;
 		box-sizing: border-box;
 		width: 100%;
 		height: 50px;
@@ -610,10 +627,6 @@
 		background-color: transparent;
 		border: none;
 		outline: none;
-
-		& svg {
-			fill: #000;
-		}
 	}
 
 	&
