--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -260,6 +260,10 @@
 			gap: 26px;
 		}
 	}
+
+	& .cthf__mob-icon-wrapper {
+		display: flex;
+	}
 }
 /* Responsive Buttons */
 .cthf__responsive-navigation {
@@ -336,8 +340,6 @@
 			transition: all 0.23s ease-out;
 
 			&:hover {
-				color: #fff;
-				background-color: #f90;
 				transform: rotate(180deg);
 				transition: all 0.23s ease-in-out;
 			}
@@ -351,12 +353,15 @@
 	}
 
 	& .cthf__search-body {
-		margin: 0;
 		position: absolute;
-		top: 25%;
+		top: 15%;
 		left: 50%;
-		transform: translate(-50%, -50%);
-		width: 80%;
+		transform: translateX(-50%);
+		width: 100%;
+		max-width: 980px;
+		margin: 0 auto;
+		padding: 0 26px;
+		box-sizing: border-box;
 
 		& .search__heading {
 			margin-top: 0;
@@ -369,10 +374,44 @@
 			position: relative;
 		}
 		& .cthf__search-results .posts__collection {
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-			gap: 26px;
-			row-gap: 20px;
+			height: fit-content;
+			max-height: 420px;
+			overflow: scroll;
+
+			& .post {
+				display: flex;
+				gap: 10px;
+				align-items: center;
+
+				&:not(:first-child) {
+					margin-top: 16px;
+				}
+			}
+
+			& .post__image {
+				min-width: 60px;
+				max-width: 60px;
+				max-height: 60px;
+				margin: 0;
+				overflow: hidden;
+
+				& img {
+					height: auto;
+					min-height: 60px;
+					width: 100%;
+					object-fit: cover;
+					transition: all 0.3s ease-in-out;
+				}
+
+				&:hover img {
+					transform: scale(1.2);
+					transition: all 0.3s ease;
+				}
+			}
+
+			& .post__title {
+				margin: 0;
+			}
 		}
 	}
 
@@ -446,12 +485,18 @@
 			position: absolute;
 			top: 0;
 			right: 0;
-			width: 24px;
-			height: 24px;
-			fill: #000;
+			width: 18px;
+			height: 18px;
+			color: #000;
 			display: flex;
 			cursor: pointer;
 			margin: 10px;
+			transition: all 0.23s ease-out;
+
+			&:hover {
+				transform: rotate(180deg);
+				transition: all 0.23s ease-in-out;
+			}
 		}
 
 		/* Menu */
