--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -598,36 +598,44 @@
 @keyframes openTrayLeft {
 	from {
 		left: -100%;
+		opacity: 0;
 	}
 	to {
 		left: 0;
+		opacity: 1;
 	}
 }
 
 @keyframes openTrayRight {
 	from {
 		right: -100%;
+		opacity: 0;
 	}
 	to {
 		right: 0;
+		opacity: 1;
 	}
 }
 
 @keyframes closeTrayRight {
 	from {
 		right: 0;
+		opacity: 1;
 	}
 	to {
 		right: -100%;
+		opacity: 0;
 	}
 }
 
 @keyframes closeTrayLeft {
 	from {
 		left: 0;
+		opacity: 1;
 	}
 	to {
 		left: -100%;
+		opacity: 0;
 	}
 }
 
