fix: header first submenu icon style and footer save with blockprops

--- a/footer/src/style.scss
+++ b/footer/src/style.scss
@@ -17,6 +17,7 @@
 	cursor: pointer;
 	visibility: hidden;
 	opacity: 0;
+	text-align: center;
 	transition: all 0.3s ease-in-out;
 
 	&.is-visible {
