--- a/header/src/style.scss
+++ b/header/src/style.scss
@@ -72,6 +72,16 @@
 	& .content-align-right .custom-logo-link {
 		margin: 0 0 0 auto;
 	}
+	/* Site Title */
+	& .site-title h1,
+	& .site-title h2,
+	& .site-title h3,
+	& .site-title h4,
+	& .site-title h5,
+	& .site-title h6,
+	& .site-title p {
+		margin: 0;
+	}
 
 	/* Navigation */
 	& .content-align-center .wp-block-navigation__container {
@@ -766,7 +776,7 @@
 }
 
 // Search styles
-.cthf__search-modal-overlay.wp-block-search__button-only {
+.is-style-cthf__search-modal-overlay.wp-block-search__button-only {
 	& .wp-block-search__input {
 		display: none;
 	}
